# ROM_Project

./: README.md  map.pgm  map.yaml
gestos_robot/: package.xml  setup.cfg  setup.py
gestos_robot/gestos_robot/: gestos_node.py  run_gestos.py  subscriber_node.py
gestos_robot/launch/: gestos_launch.py
src/cartografia_pkg/: CMakeLists.txt  package.xml
src/cartografia_pkg/launch/: localization_launch.py
src/cartografia_pkg/src/: amcl_odom.cpp
src/teclado_modo/: package.xml  setup.cfg  setup.py
src/teclado_modo/teclado_modo/: teclado_modo_node.py
src/turtlebot3_coppeliasim/launch/: project_model.launch.py
src/turtlebot3_coppeliasim/rviz/: tb3_coppeliasim.rviz
src/turtlebot3_main/: CMakeLists.txt  package.xml
src/turtlebot3_main/src/: random_mode.cpp  random_mode.hpp  turtlebot3_main.cpp
src/turtlebot3_main/src/intelligent_mode/: intelligent_mode.hpp
src/turtlebot3_socket_bridge/: package.xml  setup.cfg  setup.py
src/turtlebot3_socket_bridge/turtlebot3_socket_bridge/: socket_tcp_publisher.py  socket_udp_publisher.py
